# stripe-servant

./: .gitignore  .gitmodules  LICENSE  README.md  stack.yaml  stripe-client.cabal  stripe-servant.cabal  stripe-todo  todo
app/: Main.hs
src/: Lib.hs  Stripe.hs  Util.hs
src/Stripe/: API.hs  Data.hs  Error.hs  Helpers.hs  Types.hs  Util.hs
src/Stripe/API/: HTTP.hs
src/Stripe/API/Request/: BankAccount.hs  Card.hs  Charge.hs  Customer.hs  Plan.hs  Subscription.hs  SubscriptionItem.hs
src/Stripe/Data/: BankAccount.hs  Card.hs  Charge.hs  Customer.hs  Id.hs  Plan.hs  Subscription.hs
src/Stripe/Unsafe/: BankAccountToken.hs
stripe-docs/v2017-08-15/stripe/: Stripe API Reference.html  Using Connect with Custom Accounts.html  Using Connect with Standard Accounts.html  Using Webhooks.html
stripe-docs/v2017-08-15/stripe-connect/: Authentication with Connect.html  Best Practices for Platforms with Express or Custom Accounts.html  Connect Account Types.html  Connect OAuth Reference.html  Connect Overview.html  Connect Quickstart.html  Connect Webhooks.html  Creating Destination Charges on Your Platform.html  Creating Direct Charges.html  Creating Separate Charges and Transfers.html  Creating Subscriptions.html  Debiting Express and Custom Accounts.html  Express Accounts.html  Identity Verification for Custom Accounts.html  Recipient to Account Migrations.html  Required Verification Information.html  Setting Bank and Debit Card Payouts.html  Shared Customers.html  Testing with Connect.html  Understanding Connect Account Balances.html  Updating Accounts and Services Agreement Acceptance.html
stripe-docs/v2017-08-15/stripe-connect/Best Practices for Platforms with Express or Custom Accounts_files/: algoliasearch-ccb98f296c1e54994357b8d396b3ce13.js  documentation-search-76a887ea03340dcf4d184728b1daad3d.js
stripe-docs/v2017-08-15/stripe-connect/Connect Account Types_files/: common-966a7c7414d89c40541b15f2adfa6a26.css
stripe-docs/v2017-08-15/stripe-connect/Connect Overview_files/: default-6388c486f7388db1252f0d7c85db5e15.css
stripe-docs/v2017-08-15/stripe-connect/Connect Quickstart_files/: dynamics.min-f8b2e1648525e57b196b53792a19cda3.js
stripe-docs/v2017-08-15/stripe-connect/Connect Webhooks_files/: base-3cdaeb306a5f322afd95a5e0122a3388.css  documentation-analytics-7e4ac19718751588692cdd0955dba883.js
stripe-docs/v2017-08-15/stripe-connect/Creating Destination Charges on Your Platform_files/: saved_resource(1)
stripe-docs/v2017-08-15/stripe-connect/Creating Subscriptions_files/: outer.html
stripe-docs/v2017-08-15/stripe-connect/Express Accounts_files/: jquery.cookie-368e8ec1948575a79f6830f8d13db348.js
stripe-docs/v2017-08-15/stripe-connect/Shared Customers_files/: documentation-7c70e4ce8ad6acf781df9ae3602b8a0e.js  saved_resource(1)
stripe-docs/v2017-08-15/stripe-connect/Testing with Connect_files/: gtm.js
stripe-docs/v2017-08-15/stripe-connect/Updating Accounts and Services Agreement Acceptance_files/: 742650679237989  documentation-9d21cec0f3371635162f9c978350719d.js  inner-preview.html
stripe-docs/v2017-08-15/stripe/Stripe API Reference_files/: api-013732721e9eadecb977ee4f15d25236.js  api-db5bda56218fa4e3970e785b8ebff1ce.css  fontloader-bc67d3167b3dd5aee68c3451f6e73168.js  fonts.css  index-692b4b84beb531eefa9bd2c34e9d3076.js  inner-preview.html  jquery-63d95594326d783037113b616637e19e.js  outer.html  prism-d97c2fbc02243c145440b270c43ec26b.js  waypoints.4.0.0-969a4b48eed81d06c130f468f82cb287.js
stripe-docs/v2017-08-15/stripe/Using Webhooks_files/: inner-preview.html  outer.html
test/: Spec.hs
