name:                stripe-client
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/bchase/stripe-client#readme
license:             BSD3
license-file:        LICENSE
author:              Brad Chase
maintainer:          brad@these8bits.com
copyright:           2017 Brad Chase
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stripe
                     , Stripe.Types
                     , Stripe.Error
                     , Stripe.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bytestring
                     , case-insensitive
                     , containers
                     , either
                     , http-client
                     , http-client-tls
                     , http-types
                     , servant >= 0.12 && < 0.13
                     , servant-server >= 0.12 && < 0.13
                     , servant-client >= 0.12 && < 0.13
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable stripe-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stripe-client
  default-language:    Haskell2010

test-suite stripe-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stripe-client
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bchase/stripe-client
