name:                stripe-servant
version:             0.2.1.0
synopsis:            The Stripe API (partially) defined in Haskell as a Servant API type
description:         The Stripe API (partially) defined in Haskell as a Servant API type
homepage:            https://github.com/bchase/stripe-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Brad Chase
maintainer:          brad@these8bits.com
copyright:           2017 Brad Chase
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror

  exposed-modules:     Stripe
                     , Stripe.Types
                     , Stripe.Error
                     , Stripe.Helpers
                     , Stripe.Util
                     , Stripe.API
                     , Stripe.API.HTTP
                     , Stripe.API.Request.BankAccount
                     , Stripe.API.Request.Card
                     , Stripe.API.Request.Charge
                     , Stripe.API.Request.Customer
                     , Stripe.API.Request.Plan
                     , Stripe.API.Request.Subscription
                     , Stripe.API.Request.SubscriptionItem
                     , Stripe.Data.BankAccount
                     , Stripe.Data.Card
                     , Stripe.Data.Charge
                     , Stripe.Data.Customer
                     , Stripe.Data.Id
                     , Stripe.Data.Plan
                     , Stripe.Data.Subscription
                     , Stripe.Unsafe.BankAccountToken

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bytestring
                     , case-insensitive
                     , containers
                     , either
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , mtl >= 2.2.1 && < 2.3
                     , servant >= 0.14 && < 0.15
                     , servant-server >= 0.14 && < 0.15
                     , servant-client >= 0.14 && < 0.15
                     , scientific
                     , template-haskell
                     , text
                     , time
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

executable stripe-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , mtl
                     , stripe-servant
                     , time
                     , unordered-containers
  default-language:    Haskell2010

test-suite stripe-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stripe-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bchase/stripe-servant
